5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3995/executions/1791_1621.log
== TEST (2019-05-29 14:22:17) 
-- CODE:
from numpy import*
p=input("nome:".upper())
q=array(eval(input("quantidade:")))

i=0
t=0
T=0
while(i<size(p)):
	if(p[i]=="ARROZ"):
		t=t+(q[i]*1.25)
	elif(p[i]=="FEIJAO"):
		t=t+(q[i]*2.60)
	elif(p[i]=="BIS"):
		t=t+(q[i]*1.80)
	elif(p[i]=="MIOJO"):
		t=t+(q[i]*0.85)
	else:
		t=t+(q[i]*3.20)
	T=T+t
	i=i+1
	
print(T)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:22:38) 
-- CODE:
from numpy import*
p=input("nome:".upper())
q=array(eval(input("quantidade:")))

i=0
t=0
T=0
while(i<size(p)):
	if(p[i]=="ARROZ"):
		t=t+(q[i]*1.25)
	elif(p[i]=="FEIJAO"):
		t=t+(q[i]*2.60)
	elif(p[i]=="BIS"):
		t=t+(q[i]*1.80)
	elif(p[i]=="MIOJO"):
		t=t+(q[i]*0.85)
	else:
		t=t+(q[i]*3.20)
	T=T+t
	i=i+1
	
print(T)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:22:48) 
-- CODE:
from numpy import*
p=input("nome:").upper
q=array(eval(input("quantidade:")))

i=0
t=0
T=0
while(i<size(p)):
	if(p[i]=="ARROZ"):
		t=t+(q[i]*1.25)
	elif(p[i]=="FEIJAO"):
		t=t+(q[i]*2.60)
	elif(p[i]=="BIS"):
		t=t+(q[i]*1.80)
	elif(p[i]=="MIOJO"):
		t=t+(q[i]*0.85)
	else:
		t=t+(q[i]*3.20)
	T=T+t
	i=i+1
	
print(T)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:23:26) 
-- CODE:
from numpy import*
p=input("nome:").upper
q=array(eval(input("quantidade:")))

i=0
t=0
T=0
while(i<size(p)):
	if(p[i]=="ARROZ"):
		t=t+(q[i]*1.25)
	elif(p[i]=="FEIJAO"):
		t=t+(q[i]*2.60)
	elif(p[i]=="BIS"):
		t=t+(q[i]*1.80)
	elif(p[i]=="MIOJO"):
		t=t+(q[i]*0.85)
	else:
		t=t+(q[i]*3.20)
	T=T+t
	i=i+1
	
print(T)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:24:27) 
-- CODE:
from numpy import*
p=input("nome:").upper
q=array(eval(input("quantidade:")))

i=0
t=0
T=0
while(i<size(p)):
	if(p[i]=="arroz"):
		t=t+(q[i]*1.25)
	elif(p[i]=="feijao"):
		t=t+(q[i]*2.60)
	elif(p[i]=="bis"):
		t=t+(q[i]*1.80)
	elif(p[i]=="miojo"):
		t=t+(q[i]*0.85)
	else:
		t=t+(q[i]*3.20)
	T=T+t
	i=i+1
	
print(T)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:24:48) 
-- CODE:
from numpy import*
p=input("nome:").upper
q=array(eval(input("quantidade:")))

i=0
t=0
T=0
while(i<size(p)):
	if(p[i]=="arroz"):
		t=t+(q[i]*1.25)
	elif(p[i]=="feijao"):
		t=t+(q[i]*2.60)
	elif(p[i]=="bis"):
		t=t+(q[i]*1.80)
	elif(p[i]=="miojo"):
		t=t+(q[i]*0.85)
	else:
		t=t+(q[i]*3.20)
	T=T+t
	i=i+1
	
print(T)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:26:01) 
-- CODE:
from numpy import*
p=input("nome:").upper
q=array(eval(input("quantidade:")))

i=0
t=0
T=0
v=p[int(p[:])]
while(i<size(p)):
	if(p[i]=="arroz"):
		t=t+(q[i]*1.25)
	elif(p[i]=="feijao"):
		t=t+(q[i]*2.60)
	elif(p[i]=="bis"):
		t=t+(q[i]*1.80)
	elif(p[i]=="miojo"):
		t=t+(q[i]*0.85)
	else:
		t=t+(q[i]*3.20)
	T=T+t
	i=i+1
	
print(T)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:26:14) 
-- CODE:
from numpy import*
p=input("nome:").upper
q=array(eval(input("quantidade:")))

i=0
t=0
T=0
v=p[int(p[:])]
while(i<size(p)):
	if(p[i]=="arroz"):
		t=t+(q[i]*1.25)
	elif(p[i]=="feijao"):
		t=t+(q[i]*2.60)
	elif(p[i]=="bis"):
		t=t+(q[i]*1.80)
	elif(p[i]=="miojo"):
		t=t+(q[i]*0.85)
	else:
		t=t+(q[i]*3.20)
	T=T+t
	i=i+1
	
print(T)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:27:58) 
-- CODE:
from numpy import*
p=input("nome:").upper
q=array(eval(input("quantidade:")))

i=0
t=0

while(i<len(p)):
	if(p[i]=="arroz"):
		t=t+(q[i]*1.25)
	elif(p[i]=="feijao"):
		t=t+(q[i]*2.60)
	elif(p[i]=="bis"):
		t=t+(q[i]*1.80)
	elif(p[i]=="miojo"):
		t=t+(q[i]*0.85)
	else:
		t=t+(q[i]*3.20)
	T=T+t
	i=i+1
	
print(T)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:28:25) 
-- CODE:
from numpy import*
p=input("nome:").upper
q=array(eval(input("quantidade:")))

i=0
t=0
T=0
while(i<len(p)):
	if(p[i]=="ARROZ"):
		t=t+(q[i]*1.25)
	elif(p[i]=="FEIJAO"):
		t=t+(q[i]*2.60)
	elif(p[i]=="BIS"):
		t=t+(q[i]*1.80)
	elif(p[i]=="MIOJO"):
		t=t+(q[i]*0.85)
	else:
		t=t+(q[i]*3.20)
	T=T+t
	i=i+1
	
print(T)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:35:38) 
-- CODE:
from numpy import*
p=input("nome:").upper
q=array(eval(input("quantidade:")))

i=0
t=0
T=0
while(i<len(p)):
	if(p[i]=="ARROZ"):
		t=t+(q[i]*1.25)
	elif(p[i]=="FEIJAO"):
		t=t+(q[i]*2.60)
	elif(p[i]=="BIS"):
		t=t+(q[i]*1.80)
	elif(p[i]=="MIOJO"):
		t=t+(q[i]*0.85)
	else:
		t=t+(q[i]*3.20)
	T=T+t
	i=i+1
	
print(T)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:41:17) 
-- CODE:
from numpy import*
p=input("nome:").upper
q=array(eval(input("quantidade:")))

i=0

while(i<len(p)):
	if(p[i]=="ARROZ"):
		a=(q[i]*1.25)
	elif(p[i]=="FEIJAO"):
		f=(q[i]*2.60)
	elif(p[i]=="BIS"):
		b=(q[i]*1.80)
	elif(p[i]=="MIOJO"):
		m=(q[i]*0.85)
	else:
		f1=(q[i]*3.20)
	i=i+1
T=a+f+b+m+f1
	
print(T)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:41:56) 
-- CODE:
from numpy import*
p=input("nome:").upper
q=array(eval(input("quantidade:")))

i=0

while(i<size(q)):
	if(p[i]=="ARROZ"):
		a=(q[i]*1.25)
	elif(p[i]=="FEIJAO"):
		f=(q[i]*2.60)
	elif(p[i]=="BIS"):
		b=(q[i]*1.80)
	elif(p[i]=="MIOJO"):
		m=(q[i]*0.85)
	else:
		f1=(q[i]*3.20)
	i=i+1
T=a+f+b+m+f1
	
print(T)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:42:12) 
-- CODE:
from numpy import*
p=input("nome:").upper
q=array(eval(input("quantidade:")))

i=0

while(i<size(q)):
	if(p[i]=="ARROZ"):
		a=(q[i]*1.25)
	elif(p[i]=="FEIJAO"):
		f=(q[i]*2.60)
	elif(p[i]=="BIS"):
		b=(q[i]*1.80)
	elif(p[i]=="MIOJO"):
		m=(q[i]*0.85)
	else:
		f1=(q[i]*3.20)
	i=i+1
T=a+f+b+m+f1
	
print(T)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:45:52) 
-- CODE:
from numpy import*
p=input("nome:").upper()
q=array(eval(input("quantidade:")))

i=0

while(i<size(q)):
	if(p[i]=="ARROZ"):
		a=(q[i]*1.25)
	elif(p[i]=="FEIJAO"):
		f=(q[i]*2.60)
	elif(p[i]=="BIS"):
		b=(q[i]*1.80)
	elif(p[i]=="MIOJO"):
		m=(q[i]*0.85)
	else:
		f1=(q[i]*3.20)
	i=i+1
T=a+f+b+m+f1
	
print(T)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:46:38) 
-- CODE:
from numpy import*
p=input("nome:").upper()
q=array(eval(input("quantidade:")))

i=0
a=0
f=0
b=0
m=0
f1=0
while(i<size(q)):
	if(p[i]=="ARROZ"):
		a=(q[i]*1.25)
	elif(p[i]=="FEIJAO"):
		f=(q[i]*2.60)
	elif(p[i]=="BIS"):
		b=(q[i]*1.80)
	elif(p[i]=="MIOJO"):
		m=(q[i]*0.85)
	else:
		f1=(q[i]*3.20)
	i=i+1
T=a+f+b+m+f1
	
print(T)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:47:48) 
-- CODE:
from numpy import*
p=input("nome:").upper()
q=array(eval(input("quantidade:")))

i=0
a=0
f=0
b=0
m=0
f1=0
while(i<size(q)):
	if(p[i]=="ARROZ"):
		a=(q[i]*1.25)
	elif(p[i]=="FEIJAO"):
		f=(q[i]*2.60)
	elif(p[i]=="BIS"):
		b=(q[i]*1.80)
	elif(p[i]=="MIOJO"):
		m=(q[i]*0.85)
	elif("FANTA"):
		f1=(q[i]*3.20)
	i=i+1
T=a+f+b+m+f1
	
print(T)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:48:38) 
-- CODE:
from numpy import*
p=input("nome:").upper()
q=array(eval(input("quantidade:")))

i=0
a=0
f=0
b=0
m=0
f1=0
while(i<size(q)):
	if(p[i]=="ARROZ"):
		a=(q[i]*1.25)
	elif(p[i]=="FEIJAO"):
		f=(q[i]*2.60)
	elif(p[i]=="BIS"):
		b=(q[i]*1.80)
	elif(p[i]=="MIOJO"):
		m=(q[i]*0.85)
	elif("FANTA"):
		f1=(q[i]*3.20)
	i=i+1
T=a+f+b+m+f1
	
print(round(T,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:52:28) 
-- CODE:
from numpy import*
p=input("nome:").upper()
q=array(eval(input("quantidade:")))

i=0
a=0
f=0
b=0
m=0
f1=0
while(i<size(q)):
	if(p[i]=="ARROZ"):
		a=(q[i]*1.25)
	elif(p[i]=="FEIJAO"):
		f=(q[i]*2.60)
	elif(p[i]=="BIS"):
		b=(q[i]*1.80)
	elif(p[i]=="MIOJO"):
		m=(q[i]*0.85)
	elif("FANTA"):
		f1=(q[i]*3.20)
	i=i+1
T=a+f+b+m+f1
	
print(round(T,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:52:38) 
-- CODE:
from numpy import*
p=input("nome:").upper()
q=array(eval(input("quantidade:")))

i=0
a=0
f=0
b=0
m=0
f1=0
while(i<size(q)):
	if(p[i]=="ARROZ"):
		a=(q[i]*1.25)
	elif(p[i]=="FEIJAO"):
		f=(q[i]*2.60)
	elif(p[i]=="BIS"):
		b=(q[i]*1.80)
	elif(p[i]=="MIOJO"):
		m=(q[i]*0.85)
	elif("FANTA"):
		f1=(q[i]*3.20)
	i=i+1
T=a+f+b+m+f1
	
print(round(T,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:52:47) 
-- CODE:
from numpy import*
p=input("nome:").upper()
q=array(eval(input("quantidade:")))

i=0
a=0
f=0
b=0
m=0
f1=0
while(i<size(q)):
	if(p[i]=="ARROZ"):
		a=(q[i]*1.25)
	elif(p[i]=="FEIJAO"):
		f=(q[i]*2.60)
	elif(p[i]=="BIS"):
		b=(q[i]*1.80)
	elif(p[i]=="MIOJO"):
		m=(q[i]*0.85)
	elif("FANTA"):
		f1=(q[i]*3.20)
	i=i+1
T=a+f+b+m+f1
	
print(round(T,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:53:29) 
-- CODE:
from numpy import*
p=input("nome:").upper()
q=eval(input("quantidade:"))

i=0
a=0
f=0
b=0
m=0
f1=0
while(i<size(q)):
	if(p[i]=="ARROZ"):
		a=(q[i]*1.25)
	elif(p[i]=="FEIJAO"):
		f=(q[i]*2.60)
	elif(p[i]=="BIS"):
		b=(q[i]*1.80)
	elif(p[i]=="MIOJO"):
		m=(q[i]*0.85)
	elif("FANTA"):
		f1=(q[i]*3.20)
	i=i+1
T=a+f+b+m+f1
	
print(round(T,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:54:16) 
-- CODE:
from numpy import*
p=input("nome:").upper()
q=eval(input("quantidade:"))

i=0
a=0
f=0
b=0
m=0
f1=0
while(i<size(q)):
	if(p[i]=="ARROZ"):
		a=(q[i]*1.25)
	elif(p[i]=="FEIJAO"):
		f=(q[i]*2.60)
	elif(p[i]=="BIS"):
		b=(q[i]*1.80)
	elif(p[i]=="MIOJO"):
		m=(q[i]*0.85)
	elif(p[i]=="FANTA"):
		f1=(q[i]*3.20)
	i=i+1
T=a+f+b+m+f1
	
print(round(T,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:55:30) 
-- CODE:
from numpy import*
p=input("nome:").upper()
q=array(eval(input("quantidade:")))

i=0
a=0
f=0
b=0
m=0
f1=0
while(i<size(q)):
	if(p[i]=="ARROZ"):
		a=(q[i]*1.25)
	elif(p[i]=="FEIJAO"):
		f=(q[i]*2.60)
	elif(p[i]=="BIS"):
		b=(q[i]*1.80)
	elif(p[i]=="MIOJO"):
		m=(q[i]*0.85)
	elif(p[i]=="FANTA"):
		f1=(q[i]*3.20)
	i=i+1
T=a+f+b+m+f1
	
print(round(T,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:56:02) 
-- CODE:
from numpy import*
p=input("nome:").upper()
q=array(eval(input("quantidade:")))

i=0
a=0
f=0
b=0
m=0
f1=0
while(i<size(q)):
	if(p[i]=="ARROZ"):
		a=(q[i]*1.25)
	elif(p[i]=="FEIJAO"):
		f=(q[i]*2.60)
	elif(p[i]=="BIS"):
		b=(q[i]*1.80)
	elif(p[i]=="MIOJO"):
		m=(q[i]*0.85)
	elif(p[i]=="FANTA"):
		f1=(q[i]*3.20)
	i=i+1
	T=a+f+b+m+f1
	
print(round(T,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:56:07) 
-- CODE:
from numpy import*
p=input("nome:").upper()
q=array(eval(input("quantidade:")))

i=0
a=0
f=0
b=0
m=0
f1=0
while(i<size(q)):
	if(p[i]=="ARROZ"):
		a=(q[i]*1.25)
	elif(p[i]=="FEIJAO"):
		f=(q[i]*2.60)
	elif(p[i]=="BIS"):
		b=(q[i]*1.80)
	elif(p[i]=="MIOJO"):
		m=(q[i]*0.85)
	elif(p[i]=="FANTA"):
		f1=(q[i]*3.20)
	i=i+1
	T=a+f+b+m+f1
	
print(round(T,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:56:29) 
-- CODE:
from numpy import*
p=input("nome:").upper()
q=array(eval(input("quantidade:")))

i=0
a=0
f=0
b=0
m=0
f1=0
while(i<size(q)):
	if(p[i]=="ARROZ"):
		a=(q[i]*1.25)
	elif(p[i]=="FEIJAO"):
		f=(q[i]*2.60)
	elif(p[i]=="BIS"):
		b=(q[i]*1.80)
	elif(p[i]=="MIOJO"):
		m=(q[i]*0.85)
	elif(p[i]=="FANTA"):
		f1=(q[i]*3.20)
	i=i+1
T=a+f+b+m+f1
	
print(round(T,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:56:34) 
-- CODE:
from numpy import*
p=input("nome:").upper()
q=array(eval(input("quantidade:")))

i=0
a=0
f=0
b=0
m=0
f1=0
while(i<size(q)):
	if(p[i]=="ARROZ"):
		a=(q[i]*1.25)
	elif(p[i]=="FEIJAO"):
		f=(q[i]*2.60)
	elif(p[i]=="BIS"):
		b=(q[i]*1.80)
	elif(p[i]=="MIOJO"):
		m=(q[i]*0.85)
	elif(p[i]=="FANTA"):
		f1=(q[i]*3.20)
	i=i+1
T=a+f+b+m+f1
	
print(round(T,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:56:43) 
-- CODE:
from numpy import*
p=input("nome:").upper()
q=array(eval(input("quantidade:")))

i=0
a=0
f=0
b=0
m=0
f1=0
while(i<size(q)):
	if(p[i]=="ARROZ"):
		a=(q[i]*1.25)
	elif(p[i]=="FEIJAO"):
		f=(q[i]*2.60)
	elif(p[i]=="BIS"):
		b=(q[i]*1.80)
	elif(p[i]=="MIOJO"):
		m=(q[i]*0.85)
	elif(p[i]=="FANTA"):
		f1=(q[i]*3.20)
	i=i+1
T=a+f+b+m+f1
	
print(round(T,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:56:52) 
-- CODE:
from numpy import*
p=input("nome:").upper()
q=array(eval(input("quantidade:")))

i=0

while(i<size(q)):
	if(p[i]=="ARROZ"):
		a=(q[i]*1.25)
	elif(p[i]=="FEIJAO"):
		f=(q[i]*2.60)
	elif(p[i]=="BIS"):
		b=(q[i]*1.80)
	elif(p[i]=="MIOJO"):
		m=(q[i]*0.85)
	elif(p[i]=="FANTA"):
		f1=(q[i]*3.20)
	i=i+1
T=a+f+b+m+f1
	
print(round(T,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:57:15) 
-- CODE:
from numpy import*
p=input("nome:").upper()
q=array(eval(input("quantidade:")))

i=0

while(i<size(q)):
	if(p[i]=="ARROZ"):
		a=(q[i]*1.25)
	elif(p[i]=="FEIJAO"):
		f=(q[i]*2.60)
	elif(p[i]=="BIS"):
		b=(q[i]*1.80)
	elif(p[i]=="MIOJO"):
		m=(q[i]*0.85)
	elif(p[i]=="FANTA"):
		f1=(q[i]*3.20)
	i=i+1
	T=a+f+b+m+f1
	
print(round(T,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:57:25) 
-- CODE:
from numpy import*
p=input("nome:").upper()
q=array(eval(input("quantidade:")))

i=0

while(i<size(q)):
	if(p[i]=="ARROZ"):
		a=(q[i]*1.25)
	elif(p[i]=="FEIJAO"):
		f=(q[i]*2.60)
	elif(p[i]=="BIS"):
		b=(q[i]*1.80)
	elif(p[i]=="MIOJO"):
		m=(q[i]*0.85)
	elif(p[i]=="FANTA"):
		f1=(q[i]*3.20)
	i=i+1
	T=a+f+b+m+f1
	
print(round(T,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:58:07) 
-- CODE:
from numpy import*
p=input("nome:").upper()
q=array(eval(input("quantidade:")))

i=0
a=0
f=0
b=0
m=0
f1=0

while(i<size(q)):
	if(p[i]=="ARROZ"):
		a=a+(q[i]*1.25)
	elif(p[i]=="FEIJAO"):
		f=f+(q[i]*2.60)
	elif(p[i]=="BIS"):
		b=b+(q[i]*1.80)
	elif(p[i]=="MIOJO"):
		m=m+(q[i]*0.85)
	elif(p[i]=="FANTA"):
		f1=f1+(q[i]*3.20)
	i=i+1
T=a+f+b+m+f1
	
print(round(T,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:58:20) 
-- CODE:
from numpy import*
p=input("nome:").upper()
q=array(eval(input("quantidade:")))

i=0
a=0
f=0
b=0
m=0
f1=0

while(i<size(q)):
	if(p[i]=="ARROZ"):
		a=a+(q[i]*1.25)
	elif(p[i]=="FEIJAO"):
		f=f+(q[i]*2.60)
	elif(p[i]=="BIS"):
		b=b+(q[i]*1.80)
	elif(p[i]=="MIOJO"):
		m=m+(q[i]*0.85)
	elif(p[i]=="FANTA"):
		f1=f1+(q[i]*3.20)
	i=i+1
T=a+f+b+m+f1
	
print(round(T,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:58:27) 
-- CODE:
from numpy import*
p=input("nome:").upper()
q=array(eval(input("quantidade:")))

i=0
a=0
f=0
b=0
m=0
f1=0

while(i<size(q)):
	if(p[i]=="ARROZ"):
		a=a+(q[i]*1.25)
	elif(p[i]=="FEIJAO"):
		f=f+(q[i]*2.60)
	elif(p[i]=="BIS"):
		b=b+(q[i]*1.80)
	elif(p[i]=="MIOJO"):
		m=m+(q[i]*0.85)
	elif(p[i]=="FANTA"):
		f1=f1+(q[i]*3.20)
	i=i+1
T=a+f+b+m+f1
	
print(round(T,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:58:57) 
-- CODE:
from numpy import*
p=input("nome:").upper()
q=array(eval(input("quantidade:")))

i=0
a=0
f=0
b=0
m=0
f1=0

while(i<size(q)):
	if(p[i]=="ARROZ"):
		a=a+(q[i]*1.25)
	elif(p[i]=="FEIJAO"):
		f=f+(q[i]*2.60)
	elif(p[i]=="BIS"):
		b=b+(q[i]*1.80)
	elif(p[i]=="MIOJO"):
		m=m+(q[i]*0.85)
	elif(p[i]=="FANTA"):
		f1=f1+(q[i]*3.20)
	else:
		a=b=f=m=f1=0
	i=i+1
T=a+f+b+m+f1
	
print(round(T,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:59:09) 
-- CODE:
from numpy import*
p=input("nome:").upper()
q=array(eval(input("quantidade:")))

i=0
a=0
f=0
b=0
m=0
f1=0

while(i<size(q)):
	if(p[i]=="ARROZ"):
		a=a+(q[i]*1.25)
	elif(p[i]=="FEIJAO"):
		f=f+(q[i]*2.60)
	elif(p[i]=="BIS"):
		b=b+(q[i]*1.80)
	elif(p[i]=="MIOJO"):
		m=m+(q[i]*0.85)
	elif(p[i]=="FANTA"):
		f1=f1+(q[i]*3.20)
	else:
		a=b=f=m=f1=0
	i=i+1
T=a+f+b+m+f1
	
print(round(T,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:00:48) 
-- CODE:
from numpy import*
p=input("nome:").upper()
q=array(eval(input("quantidade:")))


a=0
f=0
b=0
m=0
f1=0
i=0
while(i<size(q)):
	if(p[i]=="ARROZ"):
		a=a+(q[i]*1.25)
	elif(p[i]=="FEIJAO"):
		f=f+(q[i]*2.60)
	elif(p[i]=="BIS"):
		b=b+(q[i]*1.80)
	elif(p[i]=="MIOJO"):
		m=m+(q[i]*0.85)
	elif(p[i]=="FANTA"):
		f1=f1+(q[i]*3.20)
	else:
		a=b=f=m=f1=0
	i=i+1
T=a+f+b+m+f1
	
print(round(T,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:01:02) 
-- CODE:
from numpy import*
p=input("nome:").upper()
q=array(eval(input("quantidade:")))


a=0
f=0
b=0
m=0
f1=0
i=0
while(i<size(q)):
	if(p[i]=="ARROZ"):
		a=a+(q[i]*1.25)
	elif(p[i]=="FEIJAO"):
		f=f+(q[i]*2.60)
	elif(p[i]=="BIS"):
		b=b+(q[i]*1.80)
	elif(p[i]=="MIOJO"):
		m=m+(q[i]*0.85)
	elif(p[i]=="FANTA"):
		f1=f1+(q[i]*3.20)
	else:
		a=b=f=m=f1=0
	i=i+1
T=a+f+b+m+f1
	
print(round(T,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:02:12) 
-- CODE:
from numpy import*
p=input("nome:").upper()
q=array(eval(input("quantidade:")))


a=0
f=0
b=0
m=0
f1=0
i=0
while(i<size(q)):
	if(p[i]=="ARROZ"):
		a=(q[i]*1.25)
	elif(p[i]=="FEIJAO"):
		f=(q[i]*2.60)
	elif(p[i]=="BIS"):
		b=(q[i]*1.80)
	elif(p[i]=="MIOJO"):
		m=(q[i]*0.85)
	elif(p[i]=="FANTA"):
		f1=(q[i]*3.20)
	else:
		a=b=f=m=f1=0
	i=i+1
T=a+f+b+m+f1
	
print(round(T,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:02:23) 
-- CODE:
from numpy import*
p=input("nome:").upper()
q=array(eval(input("quantidade:")))


a=0
f=0
b=0
m=0
f1=0
i=0
while(i<size(q)):
	if(p[i]=="ARROZ"):
		a=(q[i]*1.25)
	elif(p[i]=="FEIJAO"):
		f=(q[i]*2.60)
	elif(p[i]=="BIS"):
		b=(q[i]*1.80)
	elif(p[i]=="MIOJO"):
		m=(q[i]*0.85)
	elif(p[i]=="FANTA"):
		f1=(q[i]*3.20)
	else:
		a=b=f=m=f1=0
	i=i+1
T=a+f+b+m+f1
	
print(round(T,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:02:28) 
-- CODE:
from numpy import*
p=input("nome:").upper()
q=array(eval(input("quantidade:")))


a=0
f=0
b=0
m=0
f1=0
i=0
while(i<size(q)):
	if(p[i]=="ARROZ"):
		a=(q[i]*1.25)
	elif(p[i]=="FEIJAO"):
		f=(q[i]*2.60)
	elif(p[i]=="BIS"):
		b=(q[i]*1.80)
	elif(p[i]=="MIOJO"):
		m=(q[i]*0.85)
	elif("FANTA"):
		f1=(q[i]*3.20)
	else:
		a=b=f=m=f1=0
	i=i+1
T=a+f+b+m+f1
	
print(round(T,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:03:39) 
-- CODE:
from numpy import*
p=input("nome:").upper()
q=array(eval(input("quantidade:")))


a=0
f=0
b=0
m=0
f1=0
i=0
while(i<size(q)):
	if(p[i]=="ARROZ"):
		a=(q[i]*1.25)
	elif(p[i]=="FEIJAO"):
		f=(q[i]*2.60)
	elif(p[i]=="BIS"):
		b=(q[i]*1.80)
	elif(p[i]=="MIOJO"):
		m=(q[i]*0.85)
	elif("FANTA"):
		f1=(q[i]*3.20)
	i=i+1

	
print(round(T,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:03:57) 
-- CODE:
from numpy import*
p=input("nome:").upper()
q=array(eval(input("quantidade:")))


a=0
f=0
b=0
m=0
f1=0
i=0
while(i<size(q)):
	if(p[i]=="ARROZ"):
		a=(q[i]*1.25)
	elif(p[i]=="FEIJAO"):
		f=(q[i]*2.60)
	elif(p[i]=="BIS"):
		b=(q[i]*1.80)
	elif(p[i]=="MIOJO"):
		m=(q[i]*0.85)
	elif(p[i]=="FANTA"):
		f1=(q[i]*3.20)
	i=i+1

	
print(round(T,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:04:01) 
-- CODE:
from numpy import*
p=input("nome:").upper()
q=array(eval(input("quantidade:")))


a=0
f=0
b=0
m=0
f1=0
i=0
while(i<size(q)):
	if(p[i]=="ARROZ"):
		a=(q[i]*1.25)
	elif(p[i]=="FEIJAO"):
		f=(q[i]*2.60)
	elif(p[i]=="BIS"):
		b=(q[i]*1.80)
	elif(p[i]=="MIOJO"):
		m=(q[i]*0.85)
	elif(p[i]=="FANTA"):
		f1=(q[i]*3.20)
	i=i+1

	
print(round(T,2))
-- EXECUTION TIME:
0.46481
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1621/main.py", line 26, in <module>
    print(round(T,2))
NameError: name 'T' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:04:07) 
-- CODE:
from numpy import*
p=input("nome:").upper()
q=array(eval(input("quantidade:")))


a=0
f=0
b=0
m=0
f1=0
i=0
while(i<size(q)):
	if(p[i]=="ARROZ"):
		a=(q[i]*1.25)
	elif(p[i]=="FEIJAO"):
		f=(q[i]*2.60)
	elif(p[i]=="BIS"):
		b=(q[i]*1.80)
	elif(p[i]=="MIOJO"):
		m=(q[i]*0.85)
	elif("FANTA"):
		f1=(q[i]*3.20)
	i=i+1

	
print(round(T,2))
-- EXECUTION TIME:
0.537618
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1621/main.py", line 26, in <module>
    print(round(T,2))
NameError: name 'T' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:04:11) 
-- CODE:
from numpy import*
p=input("nome:").upper()
q=array(eval(input("quantidade:")))


a=0
f=0
b=0
m=0
f1=0
i=0
while(i<size(q)):
	if(p[i]=="ARROZ"):
		a=(q[i]*1.25)
	elif(p[i]=="FEIJAO"):
		f=(q[i]*2.60)
	elif(p[i]=="BIS"):
		b=(q[i]*1.80)
	elif(p[i]=="MIOJO"):
		m=(q[i]*0.85)
	elif(p[i]=="FANTA"):
		f1=(q[i]*3.20)
	i=i+1

	
print(round(T,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:05:17) 
-- CODE:
from numpy import*
p=input("nome:").upper()
q=array(eval(input("quantidade:")))


a=0
f=0
b=0
m=0
f1=0
i=0
while(i<size(q)):
	if(p[i]=="ARROZ"):
		a=(q[i]*1.25)
	elif(p[i]=="FEIJAO"):
		b=(q[i]*2.60)
	elif(p[i]=="BIS"):
		c=(q[i]*1.80)
	elif(p[i]=="MIOJO"):
		d=(q[i]*0.85)
	elif(p[i]=="FANTA"):
		e=(q[i]*3.20)
	i=i+1
T=a+b+c+d+e
	
print(round(T,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:05:42) 
-- CODE:
from numpy import*
p=input("nome:").upper()
q=array(eval(input("quantidade:")))


a=0
b=0
c=0
d=0
e=0
i=0
while(i<size(q)):
	if(p[i]=="ARROZ"):
		a=(q[i]*1.25)
	elif(p[i]=="FEIJAO"):
		b=(q[i]*2.60)
	elif(p[i]=="BIS"):
		c=(q[i]*1.80)
	elif(p[i]=="MIOJO"):
		d=(q[i]*0.85)
	elif(p[i]=="FANTA"):
		e=(q[i]*3.20)
	i=i+1
T=a+b+c+d+e
	
print(round(T,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:07:03) 
-- CODE:
from numpy import*
p=input("nome:").upper()
q=array(eval(input("quantidade:")))


a=0
b=0
c=0
d=0
e=0
i=0
while(i<size(q)):
	if(p[i]=="ARROZ"):
		a=(q[i]*1.25)
	elif(p[i]=="FEIJAO"):
		b=(q[i]*2.60)
	elif(p[i]=="BIS"):
		c=(q[i]*1.80)
	elif(p[i]=="MIOJO"):
		d=(q[i]*0.85)
	elif(p[i]=="FANTA"):
		e=(q[i]*3.20)
	i=i+1
T=a+b+c+d+e
	
print(round(T,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:07:32) 
-- CODE:
from numpy import*
n=input("nomes:").upper
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:07:40) 
-- CODE:
from numpy import*
n=input("nomes:").upper
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:08:09) 
-- CODE:
from numpy import*
n=input("nomes:".upper)
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:08:15) 
-- CODE:
from numpy import*
n=input("nomes:".upper())
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:08:26) 
-- CODE:
from numpy import*
n=input("nomes:").upper()
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:08:31) 
-- CODE:
from numpy import*
n=input("nomes:").upper()
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:12:58) 
-- CODE:
from numpy import*
n=input("nomes:").upper()
v=array(int(input("quantos?")))

i=0
j=0
t=0

while(i<size(v)):
	if(n[i]=="ARROZ"):
		t=t+(v[i]*1.25)
	elif(n[i]=="FEIJAO"):
		t=t+(v[i]*2.60)
	elif(n[i]=="BIS"):
		t=t+(v[i]*1.80)
	elif(n[i]=="MIOJO"):
		t=t+(v[i]*0.85)
	elif(n[i]=="FANTA"):
		t=t+(v[i]*3.20)
	i=i+1
	j=j+t
print(round(j,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:13:26) 
-- CODE:
from numpy import*
n=input("nomes:").upper()
v=array(eval(input("quantos?")))

i=0
j=0
t=0

while(i<size(v)):
	if(n[i]=="ARROZ"):
		t=t+(v[i]*1.25)
	elif(n[i]=="FEIJAO"):
		t=t+(v[i]*2.60)
	elif(n[i]=="BIS"):
		t=t+(v[i]*1.80)
	elif(n[i]=="MIOJO"):
		t=t+(v[i]*0.85)
	elif(n[i]=="FANTA"):
		t=t+(v[i]*3.20)
	i=i+1
	j=j+t
print(round(j,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:14:18) 
-- CODE:
from numpy import*
n=input("nomes:").upper()
v=array(eval(input("quantos?")))

i=0
j=0
t=0

while(i<size(v)):
	if(n[i]=="ARROZ"):
		t=t+(v[i]*1.25)
	elif(n[i]=="FEIJAO"):
		t=t+(v[i]*2.60)
	elif(n[i]=="BIS"):
		t=t+(v[i]*1.80)
	elif(n[i]=="MIOJO"):
		t=t+(v[i]*0.85)
	elif(n[i]=="FANTA"):
		t=t+(v[i]*3.20)
	i=i+1
	j=j+t
	t=0
print(round(j,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:14:28) 
-- CODE:
from numpy import*
n=input("nomes:").upper()
v=array(eval(input("quantos?")))

i=0
j=0
t=0

while(i<size(v)):
	if(n[i]=="ARROZ"):
		t=t+(v[i]*1.25)
	elif(n[i]=="FEIJAO"):
		t=t+(v[i]*2.60)
	elif(n[i]=="BIS"):
		t=t+(v[i]*1.80)
	elif(n[i]=="MIOJO"):
		t=t+(v[i]*0.85)
	elif(n[i]=="FANTA"):
		t=t+(v[i]*3.20)
	i=i+1
	j=j+t
	t=0
print(round(j,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:14:32) 
-- CODE:
from numpy import*
n=input("nomes:").upper()
v=array(eval(input("quantos?")))

i=0
j=0
t=0

while(i<size(v)):
	if(n[i]=="ARROZ"):
		t=t+(v[i]*1.25)
	elif(n[i]=="FEIJAO"):
		t=t+(v[i]*2.60)
	elif(n[i]=="BIS"):
		t=t+(v[i]*1.80)
	elif(n[i]=="MIOJO"):
		t=t+(v[i]*0.85)
	elif(n[i]=="FANTA"):
		t=t+(v[i]*3.20)
	i=i+1
	j=j+t
	
print(round(j,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:14:53) 
-- CODE:
from numpy import*
n=input("nomes:").upper()
v=array(eval(input("quantos?")))

i=0
j=0
t=0

while(i<len(n)):
	if(n[i]=="ARROZ"):
		t=t+(v[i]*1.25)
	elif(n[i]=="FEIJAO"):
		t=t+(v[i]*2.60)
	elif(n[i]=="BIS"):
		t=t+(v[i]*1.80)
	elif(n[i]=="MIOJO"):
		t=t+(v[i]*0.85)
	elif(n[i]=="FANTA"):
		t=t+(v[i]*3.20)
	i=i+1
	j=j+t
	
print(round(j,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:15:27) 
-- CODE:
from numpy import*
n=input("nomes:").upper()
v=array(eval(input("quantos?")))

i=0
j=0
t=0

while(i<len(n)):
	if(n[i]=="ARROZ"):
		t=t+(v[i]*1.25)
	elif(n[i]=="FEIJAO"):
		t=t+(v[i]*2.60)
	elif(n[i]=="BIS"):
		t=t+(v[i]*1.80)
	elif(n[i]=="MIOJO"):
		t=t+(v[i]*0.85)
	elif(n[i]=="FANTA"):
		t=t+(v[i]*3.20)
	i=i+1
	j=j+t
	
print(round(j,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:18:26) 
-- CODE:
from numpy import*
n=input("nomes:").upper()
v=array(eval(input("quantos?")))

i=0
j=0
t=0

while(i<len(n)):
	if(n[i]=="ARROZ"):
		t=t+(v[i]*1.25)
	elif(n[i]=="FEIJAO"):
		t=t+(v[i]*2.60)
	elif(n[i]=="BIS"):
		t=t+(v[i]*1.80)
	elif(n[i]=="MIOJO"):
		t=t+(v[i]*0.85)
	elif(n[i]=="FANTA"):
		t=t+(v[i]*3.20)
	i=i+1
	j=j+t
	
print(round(j,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:18:34) 
-- CODE:
from numpy import*
n=input("nomes:").upper()
v=array(eval(input("quantos?")))

i=0
j=0
t=0

while(i<len(n)):
	if(n[i]=="ARROZ"):
		t=t+(v[i]*1.25)
	elif(n[i]=="FEIJAO"):
		t=t+(v[i]*2.60)
	elif(n[i]=="BIS"):
		t=t+(v[i]*1.80)
	elif(n[i]=="MIOJO"):
		t=t+(v[i]*0.85)
	elif(n[i]=="FANTA"):
		t=t+(v[i]*3.20)
	i=i+1
	j=j+t
	
print(round(j,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:18:59) 
-- CODE:
from numpy import*
n=input("nomes:").upper()
v=array(eval(input("quantos?")))

i=0
j=0
t=0

while(i<len(n)):
	if(n[i]=="ARROZ"):
		t=t+(v[i]*1.25)
	elif(n[i]=="FEIJAO"):
		t=t+(v[i]*2.60)
	elif(n[i]=="BIS"):
		t=t+(v[i]*1.80)
	elif(n[i]=="MIOJO"):
		t=t+(v[i]*0.85)
	elif(n[i]=="FANTA"):
		t=t+(v[i]*3.20)
	i=i+1
	t=t+t
	
print(round(j,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:19:09) 
-- CODE:
from numpy import*
n=input("nomes:").upper()
v=array(eval(input("quantos?")))

i=0
j=0
t=0

while(i<len(n)):
	if(n[i]=="ARROZ"):
		t=t+(v[i]*1.25)
	elif(n[i]=="FEIJAO"):
		t=t+(v[i]*2.60)
	elif(n[i]=="BIS"):
		t=t+(v[i]*1.80)
	elif(n[i]=="MIOJO"):
		t=t+(v[i]*0.85)
	elif(n[i]=="FANTA"):
		t=t+(v[i]*3.20)
	i=i+1
	t=t+t
	
print(round(j,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:20:31) 
-- CODE:
from numpy import*
n=input("nomes:").upper()
v=array(eval(input("quantos?")))

i=0
j=0
t=0

while(i<len(n)):
	if(n[i]=="ARROZ"):
		t=t+(v[i]*1.25)
	elif(n[i]=="FEIJAO"):
		t=t+(v[i]*2.60)
	elif(n[i]=="BIS"):
		t=t+(v[i]*1.80)
	elif(n[i]=="MIOJO"):
		t=t+(v[i]*0.85)
	elif(n[i]=="FANTA"):
		t=t+(v[i]*3.20)
	i=i+1
	j+=t
	
print(round(t,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:20:45) 
-- CODE:
from numpy import*
n=input("nomes:").upper()
v=array(eval(input("quantos?")))

i=0
j=0
t=0

while(i<len(n)):
	if(n[i]=="ARROZ"):
		t=t+(v[i]*1.25)
	elif(n[i]=="FEIJAO"):
		t=t+(v[i]*2.60)
	elif(n[i]=="BIS"):
		t=t+(v[i]*1.80)
	elif(n[i]=="MIOJO"):
		t=t+(v[i]*0.85)
	elif(n[i]=="FANT
		  A"):
		t=t+(v[i]*3.20)
	i=i+1
	j+=t
	
print(round(t,2))
-- ERROR:
File "XXXX", line 18
    elif(n[i]=="FANT
                   ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:20:51) 
-- CODE:
from numpy import*
n=input("nomes:").upper()
v=array(eval(input("quantos?")))

i=0
j=0
t=0

while(i<len(n)):
	if(n[i]=="ARROZ"):
		t=t+(v[i]*1.25)
	elif(n[i]=="FEIJAO"):
		t=t+(v[i]*2.60)
	elif(n[i]=="BIS"):
		t=t+(v[i]*1.80)
	elif(n[i]=="MIOJO"):
		t=t+(v[i]*0.85)
	elif(n[i]=="FANTA"):
		t=t+(v[i]*3.20)
	i=i+1
	j+=t
	
print(round(t,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:22:51) 
-- CODE:
from numpy import*
n=array(eval(input("nomes:"))).upper()
v=array(eval(input("quantos?")))

i=0
j=0
t=0

while(i<len(n)):
	if(n[i]=="ARROZ"):
		t=t+(v[i]*1.25)
	elif(n[i]=="FEIJAO"):
		t=t+(v[i]*2.60)
	elif(n[i]=="BIS"):
		t=t+(v[i]*1.80)
	elif(n[i]=="MIOJO"):
		t=t+(v[i]*0.85)
	elif(n[i]=="FANTA"):
		t=t+(v[i]*3.20)
	i=i+1
	j+=t
	
print(round(t,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:22:59) 
-- CODE:
from numpy import*
n=array(eval(input("nomes:"))).upper()
v=array(eval(input("quantos?")))

i=0
j=0
t=0

while(i<len(n)):
	if(n[i]=="ARROZ"):
		t=t+(v[i]*1.25)
	elif(n[i]=="FEIJAO"):
		t=t+(v[i]*2.60)
	elif(n[i]=="BIS"):
		t=t+(v[i]*1.80)
	elif(n[i]=="MIOJO"):
		t=t+(v[i]*0.85)
	elif(n[i]=="FANTA"):
		t=t+(v[i]*3.20)
	i=i+1
	j+=t
	
print(round(t,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:23:04) 
-- CODE:
from numpy import*
n=array(eval(input("nomes:")))
v=array(eval(input("quantos?")))

i=0
j=0
t=0

while(i<len(n)):
	if(n[i]=="ARROZ"):
		t=t+(v[i]*1.25)
	elif(n[i]=="FEIJAO"):
		t=t+(v[i]*2.60)
	elif(n[i]=="BIS"):
		t=t+(v[i]*1.80)
	elif(n[i]=="MIOJO"):
		t=t+(v[i]*0.85)
	elif(n[i]=="FANTA"):
		t=t+(v[i]*3.20)
	i=i+1
	j+=t
	
print(round(t,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:23:19) 
-- CODE:
from numpy import*
n=array(eval(input("nomes:")))
v=array(eval(input("quantos?")))

i=0
j=0
t=0

while(i<len(n)):
	if(n[i]=="ARROZ"):
		t=t+(v[i]*1.25)
	elif(n[i]=="FEIJAO"):
		t=t+(v[i]*2.60)
	elif(n[i]=="BIS"):
		t=t+(v[i]*1.80)
	elif(n[i]=="MIOJO"):
		t=t+(v[i]*0.85)
	elif(n[i]=="FANTA"):
		t=t+(v[i]*3.20)
	i=i+1
	j+=t
	
print(round(t,2))
-- EXECUTION TIME:
0.626712
-- TEST CASE 1:
---- input:
["BIS","MIOJO","FEIJAO","ARROZ"]
[2,1,6,2]
---- correct output:
22.55
---- user output:
22.55
-- TEST CASE 2:
---- input:
["BIS","MIOJO","FANTA"]
[2,1,6]
---- correct output:
23.65
---- user output:
23.65
-- TEST CASE 3:
---- input:
["FEIJAO","ARROZ","MIOJO"]
[4,6,3]
---- correct output:
20.45
---- user output:
20.45
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
